<resources>
    <string name="app_name">Calculator</string>
    <string name="title_1">1</string>
    <string name="title_2">2</string>
    <string name="title_3">3</string>
    <string name="title_4">4</string>
    <string name="title_5">5</string>
    <string name="title_6">6</string>
    <string name="title_7">7</string>
    <string name="title_8">8</string>
    <string name="title_9">9</string>
    <string name="title_0">0</string>

</resources>