<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clipToPadding="false"
            android:paddingHorizontal="26dp">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:maxLines="1"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="80sp" />

        </HorizontalScrollView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:text="AC"
                android:onClick="OneClick"
                android:textSize="24dp"
                style="@style/Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="+/-"
                android:textSize="24dp"
                android:id="@+id/by_plusminus"
                android:onClick="OneNumer"
                android:layout_marginHorizontal="18dp"
                style="@style/Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="%"
                android:onClick="OnPercent"
                android:id="@+id/btn_percent"
                android:layout_marginEnd="18dp"
                style="@style/Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="/"
                android:id="@+id/btn_division"
                android:onClick="OnOperation"
                style="@style/Orange.Button" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_7"
                android:id="@+id/by_7"
                android:onClick="OneNumer"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_8"
                android:id="@+id/by_8"
                android:onClick="OneNumer"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_9"
                android:id="@+id/by_9"
                android:onClick="OneNumer"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="*"
                android:id="@+id/btn_multi"
                android:onClick="OnOperation"
                style="@style/Orange.Button" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_4"
                android:id="@+id/by_4"
                android:onClick="OneNumer"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_5"
                android:id="@+id/by_5"
                android:onClick="OneNumer"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_6"
                android:id="@+id/by_6"
                android:onClick="OneNumer"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="-"
                android:id="@+id/btn_minus"
                android:onClick="OnOperation"
                style="@style/Orange.Button" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_1"
                android:id="@+id/by_1"
                android:onClick="OneNumer"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_2"
                android:id="@+id/by_2"
                android:onClick="OneNumer"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_3"
                android:id="@+id/by_3"
                android:onClick="OneNumer"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="+"
                android:onClick="OnOperation"
                android:id="@+id/btn_plus"
                style="@style/Orange.Button" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:text="@string/title_0"
                android:textAlignment="textStart"
                android:paddingStart="34dp"
                android:onClick="OneNumer"
                android:paddingEnd="0dp"
                android:id="@+id/by_0"
                android:layout_width="178dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="."
                android:onClick="OneNumer"
                android:id="@+id/by_dot"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Gray.Button" />

            <com.google.android.material.button.MaterialButton
                android:text="="
                android:onClick="OnOperationEquel"
                android:id="@+id/btn_equal"
                style="@style/Orange.Button" />
        </LinearLayout>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>